--- a/package.json
+++ b/package.json
@@ -10,29 +10,26 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "vite": "vite serve view",
     "dev": "rm -rf dist && npx babel -w server -d dist",
-    "build": "npm run lint:js && rm -rf dist && npx babel server -d dist && vite build view",
+    "build": "npm run lint:js && rm -rf dist && npx babel server -d dist && cp www/index.html dist/index.html",
     "lint:js": "npx eslint --ext .js server/ --format codeframe",
     "lint:js:fix": "npx eslint --fix --ext .js server/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@cubetool/base": "^2.0.3",
-    "@koa/router": "^10.0.0",
-    "dotenv": "^8.2.0",
-    "koa": "^2.13.1",
+    "@cubetool/base": "^2.0.6",
+    "@koa/router": "^10.1.1",
+    "dotenv": "^16.0.1",
+    "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "md5": "^2.3.0",
-    "unzipper": "^0.10.11",
-    "vue": "^3.0.5"
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@vue/compiler-sfc": "^3.0.5",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
-    "vite": "^1.0.0-rc.8"
+    "prettier": "^2.6.2",
+    "@babel/cli": "^7.17.10",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
