--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@cubetool/base": "^2.0.6",
+    "@cubetool/base": "^2.2.0",
     "@koa/router": "^10.1.1",
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
@@ -26,10 +26,10 @@
     "unzipper": "^0.10.11"
   },
   "devDependencies": {
-    "prettier": "^2.6.2",
     "@babel/cli": "^7.17.10",
-    "eslint-formatter-codeframe": "^7.32.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2"
   }
 }
